hc: guided tour - Only break between words whitespace

--- a/hc/en/categories.html
+++ b/hc/en/categories.html
@@ -93,9 +93,9 @@
                 <div class="col-document">
                     <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Categories</h1>
                     <ul class="document-nav">
-                        <li class="document-prev"><a href="markup-plugins.html"><span class="icon arrow-left">←</span> Markup Plugins</a></li>
-                        <li class="document-current">« Categories »</li>
-                        <li class="document-next"><a href="approving-comments.html">Approving Comments <span class="icon arrow-right">→</span></a></li>
+                        <li class="document-prev"><a href="markup-plugins.html"><span class="icon arrow-left">←</span>&nbsp;Markup Plugins</a></li>
+                        <li class="document-current">«&nbsp;Categories&nbsp;»</li>
+                        <li class="document-next"><a href="approving-comments.html">Approving Comments&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2 id="docs-manage-categories">Manage categories</h2>
 
