--- a/hc/en/configuration.html
+++ b/hc/en/configuration.html
@@ -93,9 +93,9 @@
                 <div class="col-document">
                     <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Configuration</h1>
                     <ul class="document-nav">
-                        <li class="document-prev"><a href="ssl-encrypting.html"><span class="icon arrow-left">←</span> SSL encryption (HTTPS)</a></li>
-                        <li class="document-current">« Configuration »</li>
-                        <li class="document-next"><a href="themes.html">Themes <span class="icon arrow-right">→</span></a></li>
+                        <li class="document-prev"><a href="ssl-encrypting.html"><span class="icon arrow-left">←</span>&nbsp;SSL encryption (HTTPS)</a></li>
+                        <li class="document-current">«&nbsp;Configuration&nbsp;»</li>
+                        <li class="document-next"><a href="themes.html">Themes&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2><a href="#docs-personal-settings" id="toc-docs-personal-settings">Personal Settings</a></h2>
 
