--- a/hc/en/embedding.html
+++ b/hc/en/embedding.html
@@ -93,9 +93,9 @@
                 <div class="col-document">
                     <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Embedding</h1>
                     <ul class="document-nav">
-                        <li class="document-prev"><a href="statistics.html"><span class="icon arrow-left">←</span> Statistics</a></li>
-                        <li class="document-current">« Embedding »</li>
-                        <li class="document-next"><a href="shared-installation.html">Shared installation <span class="icon arrow-right">→</span></a></li>
+                        <li class="document-prev"><a href="statistics.html"><span class="icon arrow-left">←</span>&nbsp;Statistics</a></li>
+                        <li class="document-current">«&nbsp;Embedding&nbsp;»</li>
+                        <li class="document-next"><a href="shared-installation.html">Shared installation&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2>The 'embed' Configuration Directive</h2>
 
