--- a/hc/en/import-export.html
+++ b/hc/en/import-export.html
@@ -93,9 +93,9 @@
                 <div class="col-document">
                     <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Im-/Export</h1>
                     <ul class="document-nav">
-                        <li class="document-prev"><a href="rss.html"><span class="icon arrow-left">←</span> Feed</a></li>
-                        <li class="document-current">« Im-/Export »</li>
-                        <li class="document-next"><a href="statistics.html">Statistics <span class="icon arrow-right">→</span></a></li>
+                        <li class="document-prev"><a href="rss.html"><span class="icon arrow-left">←</span>&nbsp;Feed</a></li>
+                        <li class="document-current">«&nbsp;Im-/Export&nbsp;»</li>
+                        <li class="document-next"><a href="statistics.html">Statistics&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2 id="docs-importexport-entries">Import/Export Entries</h2>
                     <p>On this page you can import entries from your past/older blogs. There are several sources to choose from: Native Word Press, moveableType, b2evo and other systems are supported. After you have selected the source of your blog you may need to specify additional options to the database access, so that Serendipity can fetch your old entries/users/categories/comments and import them into your Serendipity blog.</p>
