--- a/hc/en/installation.html
+++ b/hc/en/installation.html
@@ -93,9 +93,9 @@
                 <div class="col-document">
                     <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Installation</h1>
                     <ul class="document-nav">
-                        <li class="document-pref"><a href="preparing-db.html"><span class="icon arrow-left">←</span> Preparing a database</a></li>
-                        <li class="document-current">« Installation »</li>
-                        <li class="document-next"><a href="admin-interface.html">Admin interface <span class="icon arrow-right">→</span></a></li>
+                        <li class="document-pref"><a href="preparing-db.html"><span class="icon arrow-left">←</span>&nbsp;Preparing a database</a></li>
+                        <li class="document-current">«&nbsp;Installation&nbsp;»</li>
+                        <li class="document-next"><a href="admin-interface.html">Admin interface&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2><strong>Get Styx</strong> - ‘install’ or ‘upgrade’</h2>
 
