--- a/hc/en/posting-blog-entry.html
+++ b/hc/en/posting-blog-entry.html
@@ -93,9 +93,9 @@
                 <div class="col-document">
                     <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Posting Entries</h1>
                     <ul class="document-nav">
-                        <li class="document-prev"><a href="admin-interface.html"><span class="icon arrow-left">←</span> The Backend</a></li>
-                        <li class="document-current">« Posting Entries »</li>
-                        <li class="document-next"><a href="markup-plugins.html">Markup plugins <span class="icon arrow-right">→</span></a></li>
+                        <li class="document-prev"><a href="admin-interface.html"><span class="icon arrow-left">←</span>&nbsp;The Backend</a></li>
+                        <li class="document-current">«&nbsp;Posting Entries&nbsp;»</li>
+                        <li class="document-next"><a href="markup-plugins.html">Markup plugins&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2>Posting a blog entry</h2>
 
