--- a/hc/en/preparing-db.html
+++ b/hc/en/preparing-db.html
@@ -93,9 +93,9 @@
                 <div class="col-document">
                     <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Preparing a database</h1>
                     <ul class="document-nav">
-                        <li class="document-up"><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></li>
-                        <li class="document-current">« Preparing a database »</li>
-                        <li class="document-next"><a href="installation.html">Installation <span class="icon arrow-right">→</span></a></li>
+                        <li class="document-up"><a href="index.html"><span class="icon arrow-left">←</span>&nbsp;back to main page</a></li>
+                        <li class="document-current">«&nbsp;Preparing a database&nbsp;»</li>
+                        <li class="document-next"><a href="installation.html">Installation&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2 id="setting-character-sets-and-collations">Setting Character Sets and Collations</h2>
 <p>In MariaDB, the real OpenSource successor of MySQL, the default <a href="https://mariadb.com/kb/en/data-types-character-sets-and-collations/" target="_blank">character set</a> is <strong>latin1</strong>, and the default collation is <strong>latin1_swedish_ci</strong> (which may differ by distros, eg. <a href="https://mariadb.com/kb/en/differences-in-mariadb-in-debian/" target="_blank">Differences in MariaDB in Debian</a>). Both character sets and collations can be specified from the server right down to the column level, as well as for client-server connections. When changing a character set and not specifying a collation, the default collation for the new character set is always used.</p>
