--- a/hc/en/rss.html
+++ b/hc/en/rss.html
@@ -93,9 +93,9 @@
                 <div class="col-document">
                     <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Feed</h1>
                     <ul class="document-nav">
-                        <li class="document-prev"><a href="user-management.html"><span class="icon arrow-left">←</span> Users</a></li>
-                        <li class="document-current">« RSS/Atom/Feed »</li>
-                        <li class="document-next"><a href="import-export.html">Im-/Export <span class="icon arrow-right">→</span></a></li>
+                        <li class="document-prev"><a href="user-management.html"><span class="icon arrow-left">←</span>&nbsp;Users</a></li>
+                        <li class="document-current">«&nbsp;RSS/Atom/Feed&nbsp;»</li>
+                        <li class="document-next"><a href="import-export.html">Im-/Export&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2>RSS/Syndication</h2>
 
