--- a/hc/en/spam.html
+++ b/hc/en/spam.html
@@ -93,9 +93,9 @@
                 <div class="col-document">
                     <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Blocking SPAM</h1>
                     <ul class="document-nav">
-                        <li class="document-prev"><a href="trackbacks-pingbacks-commentapi.html"><span class="icon arrow-left">←</span> Connecting Comments</a></li>
-                        <li class="document-current">« Blocking SPAM »</li>
-                        <li class="document-next"><a href="ssl-encrypting.html">SSL encryption (HTTPS) <span class="icon arrow-right">→</span></a></li>
+                        <li class="document-prev"><a href="trackbacks-pingbacks-commentapi.html"><span class="icon arrow-left">←</span>&nbsp;Connecting Comments</a></li>
+                        <li class="document-current">«&nbsp;Blocking SPAM&nbsp;»</li>
+                        <li class="document-next"><a href="ssl-encrypting.html">SSL encryption (HTTPS)&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2>Blocking SPAM with the “Spam Protector” plugin</h2>
 
