--- a/hc/en/ssl-encrypting.html
+++ b/hc/en/ssl-encrypting.html
@@ -93,9 +93,9 @@
                 <div class="col-document">
                     <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - SSL encryption (HTTPS)</h1>
                     <ul class="document-nav">
-                        <li class="document-prev"><a href="spam.html"><span class="icon arrow-left">←</span> Blocking Spam</a></li>
-                        <li class="document-current">« SSL encryption (HTTPS) »</li>
-                        <li class="document-next"><a href="configuration.html">Configuration <span class="icon arrow-right">→</span></a></li>
+                        <li class="document-prev"><a href="spam.html"><span class="icon arrow-left">←</span>&nbsp;Blocking Spam</a></li>
+                        <li class="document-current">«&nbsp;SSL encryption (HTTPS)&nbsp;»</li>
+                        <li class="document-next"><a href="configuration.html">Configuration&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2>Using SSL encryption for your blog</h2>
 
