--- a/hc/en/statistics.html
+++ b/hc/en/statistics.html
@@ -93,9 +93,9 @@
                 <div class="col-document">
                     <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Statistics</h1>
                     <ul class="document-nav">
-                        <li class="document-prev"><a href="import-export.html"><span class="icon arrow-left">←</span> Im-/Export</a></li>
-                        <li class="document-current">« Statistics »</li>
-                        <li class="document-next"><a href="embedding.html">Embedding <span class="icon arrow-right">→</span></a></li>
+                        <li class="document-prev"><a href="import-export.html"><span class="icon arrow-left">←</span>&nbsp;Im-/Export</a></li>
+                        <li class="document-current">«&nbsp;Statistics&nbsp;»</li>
+                        <li class="document-next"><a href="embedding.html">Embedding&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2 id="docs-view-statistics">View Statistics</h2>
                     <p>This is available when having the <code>serendipity_event_statistik</code> event plugin installed.</p>
