--- a/hc/en/themes.html
+++ b/hc/en/themes.html
@@ -93,9 +93,9 @@
                 <div class="col-document">
                     <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Themes</h1>
                     <ul class="document-nav">
-                        <li class="document-prev"><a href="configuration.html"><span class="icon arrow-left">←</span> Configuration</a></li>
-                        <li class="document-current">« Themes »</li>
-                        <li class="document-next"><a href="using-plugins.html">Plugins <span class="icon arrow-right">→</span></a></li>
+                        <li class="document-prev"><a href="configuration.html"><span class="icon arrow-left">←</span>&nbsp;Configuration</a></li>
+                        <li class="document-current">«&nbsp;Themes&nbsp;»</li>
+                        <li class="document-next"><a href="using-plugins.html">Plugins&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2 id="docs-manage-themes">Manage Themes</h2>
 
