--- a/hc/en/trackbacks-pingbacks-commentapi.html
+++ b/hc/en/trackbacks-pingbacks-commentapi.html
@@ -93,9 +93,9 @@
                 <div class="col-document">
                     <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Connecting Comments</h1>
                     <ul class="document-nav">
-                        <li class="document-prev"><a href="approving-comments.html"><span class="icon arrow-left">←</span> Approving Comments</a></li>
-                        <li class="document-current">« Connecting Comments »</li>
-                        <li class="document-next"><a href="spam.html">Blocking Spam <span class="icon arrow-right">→</span></a></li>
+                        <li class="document-prev"><a href="approving-comments.html"><span class="icon arrow-left">←</span>&nbsp;Approving Comments</a></li>
+                        <li class="document-current">«&nbsp;Connecting Comments&nbsp;»</li>
+                        <li class="document-next"><a href="spam.html">Blocking Spam&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2>Trackbacks/Pingbacks/CommentAPI</h2>
 
