--- a/hc/en/user-management.html
+++ b/hc/en/user-management.html
@@ -93,9 +93,9 @@
                 <div class="col-document">
                     <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Users</h1>
                     <ul class="document-nav">
-                        <li class="document-prev"><a href="using-plugins.html"><span class="icon arrow-left">←</span> Plugins</a></li>
-                        <li class="document-current">« Users »</li>
-                        <li class="document-next"><a href="rss.html">RSS/Atom/Feed <span class="icon arrow-right">→</span></a></li>
+                        <li class="document-prev"><a href="using-plugins.html"><span class="icon arrow-left">←</span>&nbsp;Plugins</a></li>
+                        <li class="document-current">«&nbsp;Users&nbsp;»</li>
+                        <li class="document-next"><a href="rss.html">RSS/Atom/Feed&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2>User management</h2>
 
