--- a/hc/en/admin-interface.html
+++ b/hc/en/admin-interface.html
@@ -93,9 +93,9 @@
                 <div class="col-document">
                     <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - The Backend</h1>
                     <ul class="document-nav">
-                        <li class="document-pref"><a href="installation.html"><span class="icon arrow-left">←</span> Installation</a></li>
-                        <li class="document-current">« The Backend »</li>
-                        <li class="document-next"><a href="posting-blog-entry.html">Posting Entries <span class="icon arrow-right">→</span></a></li>
+                        <li class="document-pref"><a href="installation.html"><span class="icon arrow-left">←</span>&nbsp;Installation</a></li>
+                        <li class="document-current">«&nbsp;The Backend&nbsp;»</li>
+                        <li class="document-next"><a href="posting-blog-entry.html">Posting Entries&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2 id="docs-admin-interface">Admin interface</h2>
 
