--- a/hc/en/approving-comments.html
+++ b/hc/en/approving-comments.html
@@ -93,9 +93,9 @@
                 <div class="col-document">
                     <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Approving Comments</h1>
                     <ul class="document-nav">
-                        <li class="document-prev"><a href="categories.html"><span class="icon arrow-left">←</span> Categories</a></li>
-                        <li class="document-current">« Approving Comments »</li>
-                        <li class="document-next"><a href="trackbacks-pingbacks-commentapi.html">Connecting Comments <span class="icon arrow-right">→</span></a></li>
+                        <li class="document-prev"><a href="categories.html"><span class="icon arrow-left">←</span>&nbsp;Categories</a></li>
+                        <li class="document-current">«&nbsp;Approving Comments&nbsp;»</li>
+                        <li class="document-next"><a href="trackbacks-pingbacks-commentapi.html">Connecting Comments&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2 id="docs-approve-comments">Approve comments</h2>
                     <p>You may wish to moderate comments visitors make to your entries so they are not seen by others until they have been approved. To enable this feature, check the box labeled “Comments &amp; trackbacks to this entry requires moderation” when first creating or editing an entry. You can also make this the default setting on a user by user basis from Backend → Personal Settings.</p>
