--- a/hc/en/markup-plugins.html
+++ b/hc/en/markup-plugins.html
@@ -93,9 +93,9 @@
                 <div class="col-document">
                     <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Markup plugins</h1>
                     <ul class="document-nav">
-                        <li class="document-prev"><a href="posting-blog-entry.html"><span class="icon arrow-left">←</span> Posting Entries</a></li>
-                        <li class="document-current">« Markup plugins »</li>
-                        <li class="document-next"><a href="categories.html">Categories <span class="icon arrow-right">→</span></a></li>
+                        <li class="document-prev"><a href="posting-blog-entry.html"><span class="icon arrow-left">←</span>&nbsp;Posting Entries</a></li>
+                        <li class="document-current">«&nbsp;Markup plugins&nbsp;»</li>
+                        <li class="document-next"><a href="categories.html">Categories&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2>Markup plugins</h2>
 
