--- a/hc/en/shared-installation.html
+++ b/hc/en/shared-installation.html
@@ -93,9 +93,9 @@
                 <div class="col-document">
                     <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Shared installation</h1>
                     <ul class="document-nav">
-                        <li class="document-prev"><a href="embedding.html"><span class="icon arrow-left">←</span> Embedding</a></li>
-                        <li class="document-current">« Shared installation »</li>
-                        <li class="document-next">« End of guided Tour »</li>
+                        <li class="document-prev"><a href="embedding.html"><span class="icon arrow-left">←</span>&nbsp;Embedding</a></li>
+                        <li class="document-current">«&nbsp;Shared installation&nbsp;»</li>
+                        <li class="document-next">« End of guided Tour&nbsp;»</li>
                     </ul>
                     <h2 id="docs-shared-installation">Shared installation</h2>
 
