--- a/hc/en/using-plugins.html
+++ b/hc/en/using-plugins.html
@@ -93,9 +93,9 @@
                 <div class="col-document">
                     <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Plugins</h1>
                     <ul class="document-nav">
-                        <li class="document-prev"><a href="themes.html"><span class="icon arrow-left">←</span> Themes</a></li>
-                        <li class="document-current">« Plugins »</li>
-                        <li class="document-next"><a href="user-management.html">Users <span class="icon arrow-right">→</span></a></li>
+                        <li class="document-prev"><a href="themes.html"><span class="icon arrow-left">←</span>&nbsp;Themes</a></li>
+                        <li class="document-current">«&nbsp;Plugins&nbsp;»</li>
+                        <li class="document-next"><a href="user-management.html">Users&nbsp;<span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2>Using Plugins</h2>
 
