hc: main en page - Add the icon to tile

--- a/hc/en/index.html
+++ b/hc/en/index.html
@@ -91,7 +91,7 @@
             </div>
             <div class="col-document__wrapper">
                 <div class="col-document">
-                  <h1>Styx Help Center [en]</h1>
+                  <h1><span class="hc-home" title="Styx Help Center [en] - Documentation">⌘</span> Styx - Docs</h1>
                   <h2 id="docs-user-documentation">User documentation</h2>
                   <h3>Take a « <a href="preparing-db.html">guided tour</a> » here.</h3>
 
