hv: main - follow by screen

--- a/hc/index.html
+++ b/hc/index.html
@@ -91,8 +91,8 @@
             </div>
             <div class="col-document__wrapper">
                 <div class="col-document">
-                  <h1><img src="/i/info_icon-64.png" width="42" height="42"> Styx Help Center - MAIN-Page</h1>
-                  <p>There is no actual help center: “Main-page” yet. Please follow the left-sided links.</p>
+                  <h1><img src="/i/info_icon-64.png" width="42" height="42"> Help Center Main</h1>
+                  <p>There is no actual help center: “Main-page” yet. Please follow the left-sided links if on desktop screens ≥ 1280px, or see below.</p>
                   <p>This mainly are the <a href="/hc/en">documentation</a> and the <a href="/hc/en/faq/">FAQ</a> <strong>[en]</strong> pages.</p>
                   <p>Or use the sidebars <span class="icon icon--small"><svg class="icon__body"><use xlink:href="#menu"></use></svg> or footer links to navigate through this Styx Site.</span></p>
                   <p>&nbsp;</p>
