hc: stick to Brits

--- a/hc/en/conditional-get.html
+++ b/hc/en/conditional-get.html
@@ -106,7 +106,7 @@
 
                     <pre><code>http://example.host/serendipity/rss.php?version=2.0&amp;nocache=true</code></pre>
 
-                    <p>Of course, the usual feed behavior is not affected if none of the caching headers are provided. So if you use syndication methods to embed content from a Blog inside an application, just tune your application to either send the ‘nocache’-Variable to a Serendipity Blog, or to not send the caching headers.</p>
+                    <p>Of course, the usual feed behaviour is not affected if none of the caching headers are provided. So if you use syndication methods to embed content from a Blog inside an application, just tune your application to either send the ‘nocache’-Variable to a Serendipity Blog, or to not send the caching headers.</p>
 
                     <p>The syndication plugin can be configured to append that variable to your feed URLs from your Blog.</p>
                 </div>
