--- a/hc/en/markup-plugins.html
+++ b/hc/en/markup-plugins.html
@@ -137,7 +137,7 @@
 
                     <p>The nl2br plugin will add <code>&lt;br /&gt;</code> tags after every line in the example. Most browsers render that as the original table, with lots of space above them.</p>
 
-                    <p>There are four ways to avoid this behavior:</p>
+                    <p>There are four ways to avoid this behaviour:</p>
 
                     <ol>
                       <li>Use the “WYSIWYG”-Editor. Modern Serendipity versions will automatically avoid parsing entries with the nl2br plugin. Nothing to check, nothing to care!</li>
